--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.0",
     "framer-motion": "^12.23.26",
-    "next": "15.5.4",
+    "next": "^15.5.9",
     "ogl": "^1.0.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
